# fantastic-spelling

./: README.md  fs.css  fs.py  pyproject.toml  voice.py
fantastic_spelling/: __init__.py  __main__.py  fs.css  voice.py
